Fix audio shortcode overflow

--- a/css/_media.scss
+++ b/css/_media.scss
@@ -256,5 +256,6 @@
 .wp-audio-shortcode {
   @include container;
   display: block;
+  max-width: 100%;
   width: 40rem !important;
 }
